AWS_EKS/17.MicrozServices/kube-manifests/Mysql_ExtService.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cvkeqy8c2n2t.ap-south-1.rds.amazonaws.com
