AWS_EKS/17.MicrozServices/kube-manifests/Ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-microservices-demo
  labels:
    app: usermgmt-restapp
    runon: fargate
  namespace: ns-ums
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: eks-microservices-demo
    # Ingress Core Settings  
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'  
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:075285241029:certificate/100a583d-f350-4289-9135-3c83e6791059
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: "services.bhavindevops.shop ums.bhavindevops.com"
    alb.ingress.kubernetes.io/target-type: ip    # ✔ FIX FOR FARGATE
spec:
  ingressClassName: my-aws-ingress-class # Ingress Class
  tls:
    - hosts:
        - services.bhavindevops.shop
        - ums.bhavindevops.com
      # secretName: wildcard-bhavindevops-tls

  rules:
    - host: services.bhavindevops.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-restapp-nodeport-service
                port:
                  number: 8095                                  
# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.         
  # tls:
  #   - hosts:
  #       - services.bhavindevops.shop
  #       - ums.bhavindevops.com
  #     secretName: wildcard-bhavindevops-tls

  # rules:
  #   - host: services.bhavindevops.shop
  #     http:
  #       paths:
  #         - path: /
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: usermgmt-restapp-nodeport-service
  #               port:
  #                 number: 8095
